# orion-kl-ml-main

./: CITATION.cff  LICENSE  README.md  conda.yml  okl_embedder.py  pyproject.toml  target_molecules.txt
data/: alphabet.csv
data/raw/: orionkl_parameters_xclass.csv
models/: gbr.pkl  rfr.pkl  translator_no_iso.yml
orion_kl_ml/: __init__.py  utils.py
orion_kl_ml/models/: __init__.py  base.py  embed.py  layers.py  translator.yml
orion_kl_ml/models/tests/: test_embed.py
orion_kl_ml/pipeline/: make_predictions.py
scripts/: common.py  embed_molecules.py  embedder.py  fp_comparison.py  make_counterfactuals.py  pca.py
src/: .gitignore  embed_molecules.py
