[tool.poetry]
name = "orion_kl_ml"
version = "0.1.0"
description = "Machine learning of Orion KL"
authors = ["Kelvin Lee <kin.long.kelvin.lee@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8, < 3.10.0"
numpy = "^1.21.4"
matplotlib = "^3.5.0"
pandas = "^1.3.4"
astrochem-embedding = "^0.1.4"
jupyter = "^1.0.0"
ipython = "^7.29.0"
shap = "^0.40.0"
skunk = "^0.4.0"
exmol = "^2.1.1"
periodictable = "^1.6.1"

[tool.poetry.dev-dependencies]
black = "^21.11b0"
pytest = "^6.2.5"
flake8 = "^4.0.1"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
